tests/semantic/invalid/01_r1_duplicate_bindings_same_let.hulk
let a = 1, a = 2 in print(a);
